--- a/Photos.html
+++ b/Photos.html
@@ -41,9 +41,9 @@ div.desc {
   			<header id="header">
    			<div class="logo">
   		 		 <span class="image">
-   			 	 <a href="home.html">
+   			 	 <a href="index.html">
      				 <img src="images/11rt.png" style="height: 30mm; width: 100mm">
-    			 </a>
+    			 </a>s
    				 </span>
   			 </div>
   				 <a href="#menu"><span>Menu</span></a>
@@ -52,7 +52,7 @@ div.desc {
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="home.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="music.html">Music</a></li>
 					<li><a href="photos.html">Photos</a></li>
