--- a/contact2.html
+++ b/contact2.html
@@ -13,15 +13,15 @@
 
 		<!-- Header -->
 			<header id="header">
-				<span class="image fit"><a href="home.html"><img src="images/11rt.png" style="height: 30mm; width: 100mm"></a></span>
-				<div class="logo"><a href="home.html"></a></div>
+				<span class="image fit"><a href="index.html"><img src="images/11rt.png" style="height: 30mm; width: 100mm"></a></span>
+				<div class="logo"><a href="index.html"></a></div>
 				<a href="#menu"><span>Menu</span></a>
 			</header>
 
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="home.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="music.html">Music</a></li>
 					<li><a href="photos.html">Photos</a></li>
