--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   			<header id="header">
 	   			<div class="logo">
 	  		 		 <span class="image">
-		   			 	 <a href="home.html">
+		   			 	 <a href="index.html">
 		     				 <img src="images/11rt.png" style="height: 30mm; width: 100mm">
 		    			 </a>
 	   				 </span>
@@ -25,7 +25,7 @@
 		<!--- Navigation Bar -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="home.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="music.html">Music</a></li>
 					<li><a href="photos.html">Photos</a></li>
