--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
 
 					<p><h2>Contact Me</h2></p>
 
-				<form action="#" method="post">
+				<form action="https://formspree.io/signedkeylajones@gmail.com" method="post">
 
 						<div class="field half first" style="width:  112mm">
 
