--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
 
 		<!-- Email Contact -->
 
-				<form action="#" method="post">
+				<form action="https://formspree.io/signedkeylajones@gmail.com" method="post">
 
 						<div class="field half first" style="width:  112mm">
 
