--- a/contact2.html
+++ b/contact2.html
@@ -42,7 +42,7 @@
 
 					<h2>Contact Me</h2>
 
-					<form action="#" method="post">
+					<form action="https://formspree.io/signedkeylajones@gmail.com" method="post">
 
 						<div class="field half first">
 							<label for="name">Name</label>
