--- a/index.html
+++ b/index.html
@@ -107,7 +107,17 @@
 						</header>
 						<div class="content">
 							<!-- photo viewer here -->
-							<blockquote class="imgur-embed-pub" lang="en" data-id="a/s21gp"><a href="//imgur.com/s21gp">Signed Keyla Jones</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+							<div class="gallery">
+ 							 <a target="_blank" href="photos.html">
+   								 <img src="newphotos/8.jpg" alt="Copyright Signed Keyla Jones 2018" width="200" height="267">
+ 							 </a>
+ 							  <a target="_blank" href="photos.html">
+   								 <img src="newphotos/4.jpg" alt="Copyright Signed Keyla Jones 2018" width="200" height="267">
+ 							 </a>
+ 							  <a target="_blank" href="photos.html">
+   								 <img src="newphotos/5.jpg" alt="Copyright Signed Keyla Jones 2018" width="200" height="267">
+ 							 </a>
+							</div>
 						</div>
 						<footer>
 							<a href="photos.html" class="button alt">Learn More</a>
