update all pages to use new header/footer

--- a/newwebsite/index.html
+++ b/newwebsite/index.html
@@ -37,52 +37,47 @@
           ---------------------------------------------------------------------------
         -->
 
-
-
-        <h1 align="center" class="h1">Novels</h1>
-        <!--Nethermore-->
-        <div class="imgtext">
-            <img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="300px" align="left">
-            <p class="textleft">Nethermore: hi Salami ham hock sausage flank alcatra meatball ham drumstick picanha strip steak buffalo porchetta. Ribeye short ribs turkey, pig cupim salami leberkas corned beef pork belly venison shoulder. Pork shank short ribs, buffalo
-                jerky meatball spare ribs. Venison swine short ribs, bresaola chicken tail turkey ham hock. Jowl pork loin sausage short loin ground round burgdoggen fatback corned beef meatball shoulder leberkas beef ribs. Ham hock ham pork tail strip
-                steak meatball pancetta fatback corned beef buffalo cupim.</p>
-        </div>
-        <img src="https://i.imgur.com/7PZ1xsm.jpg" height="0px" width="0px" class="phsmall">
-        <!--thin line-->
-
-        <!--Dear Mr-->
-        <div class="imgtext">
-            <img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="300px" align="left">
-            <p class="textleft">Dear Mr: hi Salami ham hock sausage flank alcatra meatball ham drumstick picanha strip steak buffalo porchetta. Ribeye short ribs turkey, pig cupim salami leberkas corned beef pork belly venison shoulder. Pork shank short ribs, buffalo jerky
-                meatball spare ribs. Venison swine short ribs, bresaola chicken tail turkey ham hock. Jowl pork loin sausage short loin ground round burgdoggen fatback corned beef meatball shoulder leberkas beef ribs. Ham hock ham pork tail strip steak
-                meatball pancetta fatback corned beef buffalo cupim.</p>
-        </div>
-
-        <img src="https://i.imgur.com/7PZ1xsm.jpg" height="0px" width="0px" class="phsmall">
-        <!--thin line-->
-
-        <!--Forever, Lyn-->
-        <div class="imgtext">
-            <img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="300px" align="left">
-            <p class="textleft">Forever, Lyn: hi Salami ham hock sausage flank alcatra meatball ham drumstick picanha strip steak buffalo porchetta. Ribeye short ribs turkey, pig cupim salami leberkas corned beef pork belly venison shoulder. Pork shank short ribs, buffalo
-                jerky meatball spare ribs. Venison swine short ribs, bresaola chicken tail turkey ham hock. Jowl pork loin sausage short loin ground round burgdoggen fatback corned beef meatball shoulder leberkas beef ribs. Ham hock ham pork tail strip
-                steak meatball pancetta fatback corned beef buffalo cupim.</p>
-        </div>
-        <img src="https://i.imgur.com/7PZ1xsm.jpg" height="0px" width="0px" class="phsmall">
-        <!--thin line-->
-
-        <!--Rain-->
-        <div class="imgtext">
-            <img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="300px" align="left">
-            <p class="textleft">Rain: hi Salami ham hock sausage flank alcatra meatball ham drumstick picanha strip steak buffalo porchetta. Ribeye short ribs turkey, pig cupim salami leberkas corned beef pork belly venison shoulder. Pork shank short ribs, buffalo jerky
-                meatball spare ribs. Venison swine short ribs, bresaola chicken tail turkey ham hock. Jowl pork loin sausage short loin ground round burgdoggen fatback corned beef meatball shoulder leberkas beef ribs. Ham hock ham pork tail strip steak
-                meatball pancetta fatback corned beef buffalo cupim.</p>
-        </div>
-
-        <p align="center"> Read my original work here: www.wattpad.com/me</p>
-
-        <!--thin line-->
+        <img src="https://i.imgur.com/7PZ1xsm.jpg" height="350px" width="800px" class="ph1">
+        <p>ABOUT ME Bacon ipsum dolor amet boudin shank t-bone porchetta pork doner cupim corned beef chicken. Landjaeger jerky shank, pork belly brisket buffalo burgdoggen tongue filet mignon sirloin. Beef ribs ham swine pastrami doner brisket buffalo shank
+            pork chop spare ribs beef ham hock chicken. Tenderloin burgdoggen chuck, boudin rump sausage filet mignon tail. Pork venison biltong ball tip beef ribs. Tail bresaola venison, jerky short ribs tenderloin leberkas cow hamburger chuck filet
+            mignon burgdoggen. Shankle jerky kevin burgdoggen shoulder buffalo boudin tail prosciutto, pastrami chicken beef ribs ball tip meatball.</p>
         <img src="https://i.imgur.com/f9i8rLQ.jpg" height="4px" width="800px" class="phsmall">
+        <!--thin line-->
+
+        <!--Butterbeeline-->
+        <div class="imgtext">
+            <img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="300px" align="left">
+            <p class="textleft">Butterbee: hi Salami ham hock sausage flank alcatra meatball ham drumstick picanha strip steak buffalo porchetta. Ribeye short ribs turkey, pig cupim salami leberkas corned beef pork belly venison shoulder. Pork shank short ribs, buffalo jerky
+                meatball spare ribs. Venison swine short ribs, bresaola chicken tail turkey ham hock. Jowl pork loin sausage short loin ground round burgdoggen fatback corned beef meatball shoulder leberkas beef ribs. Ham hock ham pork tail strip steak
+                meatball pancetta fatback corned beef buffalo cupim.</p>
+        </div>
+
+
+        <!--Novels-->
+        <img src="https://i.imgur.com/7PZ1xsm.jpg" height="4px" width="800px" class="phsmall">
+        <!--thin line-->
+        <div class="imgtext">
+            <img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="300px" align="right">
+            <p class="textleft">NOVELS: hi Salami ham hock sausage flank alcatra meatball ham drumstick picanha strip steak buffalo porchetta. Ribeye short ribs turkey, pig cupim salami leberkas corned beef pork belly venison shoulder. Pork shank short ribs, buffalo jerky
+                meatball spare ribs. Venison swine short ribs, bresaola chicken tail turkey ham hock. Jowl pork loin sausage short loin ground round burgdoggen fatback corned beef meatball shoulder leberkas beef ribs. Ham hock ham pork tail strip steak
+                meatball pancetta fatback corned beef buffalo cupim.</p>
+        </div>
+
+
+        <!--Music-->
+        <img src="https://i.imgur.com/7PZ1xsm.jpg" height="4px" width="800px" class="phsmall">
+        <!--thin line-->
+        <div class="imgtext">
+            <img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="300px" align="left">
+            <p class="textleft">MUSIC: hi Salami ham hock sausage flank alcatra meatball ham drumstick picanha strip steak buffalo porchetta. Ribeye short ribs turkey, pig cupim salami leberkas corned beef pork belly venison shoulder. Pork shank short ribs, buffalo jerky
+                meatball spare ribs. Venison swine short ribs, bresaola chicken tail turkey ham hock. Jowl pork loin sausage short loin ground round burgdoggen fatback corned beef meatball shoulder leberkas beef ribs. Ham hock ham pork tail strip steak
+                meatball pancetta fatback corned beef buffalo cupim.</p>
+        </div>
+
+        <!--Footer-->
+        <img src="https://i.imgur.com/7PZ1xsm.jpg" height="4px" width="800px" class="phsmall">
+        <!--thin line-->
+
 
         <!--
           ---------------------------------------------------------------------------
