--- a/newwebsite/about.html
+++ b/newwebsite/about.html
@@ -37,64 +37,58 @@
           ---------------------------------------------------------------------------
         -->
 
+        <!--Ab1-->
+        <h1 align="center" class="h1">About Me</h1>
+        <div class="aboutme">
+            <img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="300px" align="left">
+            <p class="textleft">About me: hi Salami ham hock sausage flank alcatra meatball ham drumstick picanha strip steak buffalo porchetta. Ribeye short ribs turkey, pig cupim salami leberkas corned beef pork belly venison shoulder. Pork shank short ribs, buffalo jerky
+                meatball spare ribs. Venison swine short ribs, bresaola chicken tail turkey ham hock. Jowl pork loin sausage short loin ground round burgdoggen fatback corned beef meatball shoulder leberkas beef ribs. Ham hock ham pork tail strip steak
+                meatball pancetta fatback corned beef buffalo cupim.</p>
+            <img src="https://i.imgur.com/f9i8rLQ.jpg" height="4px" width="800px" class="phsmall">
+            <!--thin line-->
+        </div>
 
-
-        <img src="https://i.imgur.com/7PZ1xsm.jpg" height="350px" width="800px" class="ph1">
-        <p>ABOUT ME Bacon ipsum dolor amet boudin shank t-bone porchetta pork doner cupim corned beef chicken. Landjaeger jerky shank, pork belly brisket buffalo burgdoggen tongue filet mignon sirloin. Beef ribs ham swine pastrami doner brisket buffalo shank
-            pork chop spare ribs beef ham hock chicken. Tenderloin burgdoggen chuck, boudin rump sausage filet mignon tail. Pork venison biltong ball tip beef ribs. Tail bresaola venison, jerky short ribs tenderloin leberkas cow hamburger chuck filet
-            mignon burgdoggen. Shankle jerky kevin burgdoggen shoulder buffalo boudin tail prosciutto, pastrami chicken beef ribs ball tip meatball.</p>
+        <!---three boxes-->
+        <div class="row">
+            <div class="column"><img class="boxleft" src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="250px">
+            </div>
+            <div class="column"><img class="boxcenter" src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="250px">
+            </div>
+            <div class="column"><img class="boxright" src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="250px">
+            </div>
+        </div>
         <img src="https://i.imgur.com/f9i8rLQ.jpg" height="4px" width="800px" class="phsmall">
         <!--thin line-->
 
-        <!--Butterbeeline-->
-        <div class="imgtext">
-            <img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="300px" align="left">
-            <p class="textleft">Butterbee: hi Salami ham hock sausage flank alcatra meatball ham drumstick picanha strip steak buffalo porchetta. Ribeye short ribs turkey, pig cupim salami leberkas corned beef pork belly venison shoulder. Pork shank short ribs, buffalo jerky
-                meatball spare ribs. Venison swine short ribs, bresaola chicken tail turkey ham hock. Jowl pork loin sausage short loin ground round burgdoggen fatback corned beef meatball shoulder leberkas beef ribs. Ham hock ham pork tail strip steak
-                meatball pancetta fatback corned beef buffalo cupim.</p>
+        <!---three boxes-->
+        <div class="row">
+            <div class="column"><img class="boxleft" src="https://i.imgur.com/7PZ1xsm.jpg" height="70px" width="250px">
+            </div>
+            <div class="column"><img class="boxcenter" src="https://i.imgur.com/7PZ1xsm.jpg" height="70px" width="250px">
+            </div>
+            <div class="column"><img class="boxright" src="https://i.imgur.com/7PZ1xsm.jpg" height="70px" width="250px">
+            </div>
         </div>
 
-
-        <!--Novels-->
-        <img src="https://i.imgur.com/7PZ1xsm.jpg" height="4px" width="800px" class="phsmall">
+        <img src="https://i.imgur.com/f9i8rLQ.jpg" height="4px" width="800px" class="phsmall">
         <!--thin line-->
-        <div class="imgtext">
-            <img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="300px" align="right">
-            <p class="textleft">NOVELS: hi Salami ham hock sausage flank alcatra meatball ham drumstick picanha strip steak buffalo porchetta. Ribeye short ribs turkey, pig cupim salami leberkas corned beef pork belly venison shoulder. Pork shank short ribs, buffalo jerky
-                meatball spare ribs. Venison swine short ribs, bresaola chicken tail turkey ham hock. Jowl pork loin sausage short loin ground round burgdoggen fatback corned beef meatball shoulder leberkas beef ribs. Ham hock ham pork tail strip steak
-                meatball pancetta fatback corned beef buffalo cupim.</p>
-        </div>
+    </div>
 
 
-        <!--Music-->
-        <img src="https://i.imgur.com/7PZ1xsm.jpg" height="4px" width="800px" class="phsmall">
-        <!--thin line-->
-        <div class="imgtext">
-            <img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="300px" align="left">
-            <p class="textleft">MUSIC: hi Salami ham hock sausage flank alcatra meatball ham drumstick picanha strip steak buffalo porchetta. Ribeye short ribs turkey, pig cupim salami leberkas corned beef pork belly venison shoulder. Pork shank short ribs, buffalo jerky
-                meatball spare ribs. Venison swine short ribs, bresaola chicken tail turkey ham hock. Jowl pork loin sausage short loin ground round burgdoggen fatback corned beef meatball shoulder leberkas beef ribs. Ham hock ham pork tail strip steak
-                meatball pancetta fatback corned beef buffalo cupim.</p>
-        </div>
-
-        <!--Footer-->
-        <img src="https://i.imgur.com/7PZ1xsm.jpg" height="4px" width="800px" class="phsmall">
-        <!--thin line-->
-
-
-        <!--
+    <!--
           ---------------------------------------------------------------------------
           -- DO NOT MODIFY BELOW THIS
           ---------------------------------------------------------------------------
         -->
-        <form action="https://formspree.io/signedkeylajones@gmail.com" method="POST" class="updates">
-            <span class="display: inline-block">Get the latest updates</span>
-            <input class="input" type="email" placeholder="me@gmail.com" name="_replyto" required>
-            <input class="button" type="submit" value="Sign up">
-        </form>
-        <div class="small-text copyright">
-            Copyright © 2019 Signed Keyla Jones. All rights reserved.
-            <a href="contact.html">Business inquiries</a>
-        </div>
+    <form action="https://formspree.io/signedkeylajones@gmail.com" method="POST" class="updates">
+        <span class="display: inline-block">Get the latest updates</span>
+        <input class="input" type="email" placeholder="me@gmail.com" name="_replyto" required>
+        <input class="button" type="submit" value="Sign up">
+    </form>
+    <div class="small-text copyright">
+        Copyright © 2019 Signed Keyla Jones. All rights reserved.
+        <a href="contact.html">Business inquiries</a>
+    </div>
     </div>
     </div>
 
