--- a/newwebsite/music.html
+++ b/newwebsite/music.html
@@ -40,47 +40,42 @@
         <h1 align="center" class="h1">Music</h1>
 
         <!--SoundCloud Player-->
-        <iframe class="soundcloud" width="98%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/420064073&color=%239c9c9c&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+        <div style="width: 50rem; height: 26rem;">
+            <iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/420064073&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe>
+        </div>
 
         <!---three boxes-->
-        <br><br><br>
-        <div class="row">
-            <div class="column"><img class="boxleft" src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="250px"> YT Music Vid
-            </div>
-            <div class="column"><img class="boxcenter" src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="250px"> YT Song
-            </div>
-            <div class="column"><img class="boxright" src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="250px"> YT Concert
-            </div>
+        <div class="hr"></div>
+        <div style="display: flex; justify-content: space-between;">
+            <a href="#" style="display: block"><img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="250px"></a>
+            <a href="#" style="display: block"><img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="250px"></a>
+            <a href="#" style="display: block"><img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="250px"></a>
         </div>
-        <img src="https://i.imgur.com/f9i8rLQ.jpg" height="4px" width="800px" class="phsmall">
-        <!--thin line-->
+        <div class="hr"></div>
 
         <!--ALBUM-->
-        <div class="imgtext">
-            <img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="300px" align="left">
-            <p class="textleft">ALBUM: hi Salami ham hock sausage flank alcatra meatball ham drumstick picanha strip steak buffalo porchetta. Ribeye short ribs turkey, pig cupim salami leberkas corned beef pork belly venison shoulder. Pork shank short ribs, buffalo jerky
+        <div class="image-text-left-right">
+            <img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="300px">
+            <p>ALBUM: hi Salami ham hock sausage flank alcatra meatball ham drumstick picanha strip steak buffalo porchetta. Ribeye short ribs turkey, pig cupim salami leberkas corned beef pork belly venison shoulder. Pork shank short ribs, buffalo jerky
                 meatball spare ribs. Venison swine short ribs, bresaola chicken tail turkey ham hock. Jowl pork loin sausage short loin ground round burgdoggen fatback corned beef meatball shoulder leberkas beef ribs. Ham hock ham pork tail strip steak
                 meatball pancetta fatback corned beef buffalo cupim.</p>
         </div>
-        <img src="https://i.imgur.com/f9i8rLQ.jpg" height="4px" width="800px" class="phsmall">
-        <!--thin line-->
+        <div class="hr"></div>
 
         <!--freesong-->
-        <p align="center">Download my original song, ___ for free!</p>
-        <form>
-            <input type="text" name="name" value="*First Name" class="fieldname" align="center" required>
-            <input type="text" name="name" value="*Last Name" class="fieldname" required>
-            <input type="text" name="email" value="*Email Address" class="fieldname" required>
-            <input class="submit" type="submit" value="Submit">
+        <form style="align-self: center; text-align: center; width: 25rem;">
+            <input type="hidden" name="_subject" value="Music download request" />
+            <p align="center">Get a download link of my original song, ___ for free!</p>
+            <input style="margin-bottom: .5rem; width: 15rem;" class="input" type="text" name="first_name" placeholder="First Name" required><br>
+            <input style="margin-bottom: .5rem; width: 15rem;" class="input" type="text" name="last_name" placeholder="Last Name" required><br>
+            <input style="margin-bottom: .5rem; width: 15rem;" class="input" type="text" name="email" placeholder="Email Address" required><br>
+            <input class="button" type="submit" value="Submit">
+            <p class="small-text">Terms and Conditions: blank blank blaknk blaknk blank blank blaknk blaknk blank blank blaknk blaknk blank blank blaknk blaknk blank blank blaknk blaknk blank blank blaknk blaknk blank blank blaknk blaknk blank blank blaknk blaknk blank blank
+                blaknk blaknk.
+            </p>
         </form>
 
-        <p class="terms">*Required.</p>
-        <p class="terms">Terms and Conditions: blank blank blaknk blaknk blank blank blaknk blaknk blank blank blaknk blaknk blank blank blaknk blaknk blank blank blaknk blaknk blank blank blaknk blaknk blank blank blaknk blaknk blank blank blaknk blaknk blank blank blaknk
-            blaknk.
-        </p>
-
-        <!--thin line-->
-        <img src="https://i.imgur.com/f9i8rLQ.jpg" height="4px" width="800px" class="phsmall">
+        <div class="hr"></div>
 
         <!--
           ---------------------------------------------------------------------------
