--- a/newwebsite/butterbee.html
+++ b/newwebsite/butterbee.html
@@ -37,62 +37,48 @@
           ---------------------------------------------------------------------------
         -->
 
-        <!--Ab1-->
-        <h1 align="center" class="h1">What is a ButterBee?</h1>
-        <div class="aboutme">
-            <img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="300px" align="left">
-            <p class="textleft">BUTTER: hi Salami ham hock sausage flank alcatra meatball ham drumstick picanha strip steak buffalo porchetta. Ribeye short ribs turkey, pig cupim salami leberkas corned beef pork belly venison shoulder. Pork shank short ribs, buffalo jerky
-                meatball spare ribs. Venison swine short ribs, bresaola chicken tail turkey ham hock. Jowl pork loin sausage short loin ground round burgdoggen fatback corned beef meatball shoulder leberkas beef ribs. Ham hock ham pork tail strip steak
-                meatball pancetta fatback corned beef buffalo cupim.</p>
-            <img src="https://i.imgur.com/f9i8rLQ.jpg" height="4px" width="800px" class="phsmall">
-            <!--thin line-->
+        <h1 style="text-align: center;">Butterbee</h1>
+        <div class="image-text-left-right">
+            <img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="300px">
+            <p>BUTTERBEE: hi Salami ham hock sausage flank alcatra meatball ham drumstick picanha strip steak buffalo porchetta. Ribeye short ribs turkey, pig cupim salami leberkas corned beef pork belly venison shoulder. Pork shank short ribs, buffalo jerky
+                meatball spare ribs. Venison swine short.</p>
         </div>
+        <div class="hr"></div>
 
         <!---three boxes-->
-        <div class="row">
-            <div class="column"><img class="boxleft" src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="250px"> Pilot episode
-            </div>
-            <div class="column"><img class="boxcenter" src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="250px"> Theme Song
-            </div>
-            <div class="column"><img class="boxright" src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="250px"> Creating BB
-            </div>
+        <div style="display: flex; justify-content: space-between;">
+            <a href="#" style="display: block"><img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="250px"></a>
+            <a href="#" style="display: block"><img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="250px"></a>
+            <a href="#" style="display: block"><img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="250px"></a>
         </div>
-        <img src="https://i.imgur.com/f9i8rLQ.jpg" height="4px" width="800px" class="phsmall">
-        <!--thin line-->
-
+        <div class="hr"></div>
 
         <!---three boxes-->
-        <div class="row">
-            <div class="column"><img class="boxleft" src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="250px">
-            </div>
-            <div class="column"><img class="boxcenter" src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="250px">
-            </div>
-            <div class="column"><img class="boxright" src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="250px">
-            </div>
+        <div style="display: flex; justify-content: space-between;">
+            <a href="#" style="display: block"><img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="250px"></a>
+            <a href="#" style="display: block"><img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="250px"></a>
+            <a href="#" style="display: block"><img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="250px"></a>
         </div>
-        <img src="https://i.imgur.com/f9i8rLQ.jpg" height="4px" width="800px" class="phsmall">
+        <div class="hr"></div>
 
-        <div class="content">
-            <img src="https://i.imgur.com/7PZ1xsm.jpg" height="350px" width="800px">
-            <img src="https://i.imgur.com/f9i8rLQ.jpgg" height="4px" width="800px" class="phsmall">
-            <!--thin line-->
+        <img src="https://i.imgur.com/7PZ1xsm.jpg" height="350px" width="800px">
+        <div class="hr"></div>
 
-
-            <!--
+        <!--
           ---------------------------------------------------------------------------
           -- DO NOT MODIFY BELOW THIS
           ---------------------------------------------------------------------------
         -->
-            <form action="https://formspree.io/signedkeylajones@gmail.com" method="POST" class="updates">
-                <span class="display: inline-block">Get the latest updates</span>
-                <input class="input" type="email" placeholder="me@gmail.com" name="_replyto" required>
-                <input class="button" type="submit" value="Sign up">
-            </form>
-            <div class="small-text copyright">
-                Copyright © 2019 Signed Keyla Jones. All rights reserved.
-                <a href="contact.html">Business inquiries</a>
-            </div>
+        <form action="https://formspree.io/signedkeylajones@gmail.com" method="POST" class="updates">
+            <span class="display: inline-block">Get the latest updates</span>
+            <input class="input" type="email" placeholder="me@gmail.com" name="_replyto" required>
+            <input class="button" type="submit" value="Sign up">
+        </form>
+        <div class="small-text copyright">
+            Copyright © 2019 Signed Keyla Jones. All rights reserved.
+            <a href="contact.html">Business inquiries</a>
         </div>
+    </div>
     </div>
 
     <body>
