--- a/newwebsite/contact.html
+++ b/newwebsite/contact.html
@@ -40,25 +40,27 @@
         <h1 align="center" class="h1">Contact Me</h1>
 
 
-
-        <!--ALBUM-->
-        <div class="imgtext">
-            <img src="https://i.imgur.com/7PZ1xsm.jpg" height="300px" width="300px" align="left">
-            <p align="left"> Business Inqueriy: Signedkeylajones@gmail.com</p>
-            <!--freesong-->
-            <p>Download my original song, ___ for free!</p>
-            <form>
-                <div>
-                    <input type="text" name="name" value="*Full Name" class="namefield" required>
-                    <br><input type="text" name="email" value="*Email Address" class="namefield" required>
-                    <br><input type="text" name="subject" value="Subject" class="namefield" required>
-                    <br><input type="text" name="message" value="*Message" class="message namefield" required>
-                    <input class="submit" type="submit" value="Submit">
-                </div>
-            </form>
+        <div class="image-text-left-right">
+            <img src="https://i.imgur.com/7PZ1xsm.jpg" height="300px" width="300px">
+            <div>
+                <p><strong>Business inquiry?</strong> Contact me directly at: <span id="business-inquiry-email"></span></p>
+                <br>
+                <form style="margin-left: 1rem;">
+                    <div style="display: flex;">
+                        <input style="margin-bottom: .5rem; margin-right: 1rem; flex: 1;" class="input" type="text" name="name" placeholder="Full Name" required>
+                        <input style="margin-bottom: .5rem; flex: 1;" class="input" type="text" name="email" placeholder="Email Address" required>
+                    </div>
+                    <input style="margin-bottom: .5rem; width: 30rem;" class="input" type="text" name="subject" placeholder="Subject" required><br>
+                    <textarea style="margin-bottom: .5rem; width: 30rem; height: 7rem;" class="input" name="message" placeholder="Message..." required></textarea><br>
+                    <input class="button" type="submit" value="Submit">
+                </form>
+            </div>
         </div>
-        <img src="https://i.imgur.com/f9i8rLQ.jpg" height="4px" width="800px" class="phsmall">
-        <!--thin line-->
+        <div class="hr"></div>
+        <script>
+            /* To update business email, encode it via https://www.base64encode.org/ */
+            document.querySelector('#business-inquiry-email').innerHTML = atob('U2lnbmVka2V5bGFqb25lc0BnbWFpbC5jb20=');
+        </script>
 
         <!--
           ---------------------------------------------------------------------------
