--- a/newwebsite/index.html
+++ b/newwebsite/index.html
@@ -37,46 +37,44 @@
           ---------------------------------------------------------------------------
         -->
 
-        <img src="https://i.imgur.com/7PZ1xsm.jpg" height="350px" width="800px" class="ph1">
-        <p>ABOUT ME Bacon ipsum dolor amet boudin shank t-bone porchetta pork doner cupim corned beef chicken. Landjaeger jerky shank, pork belly brisket buffalo burgdoggen tongue filet mignon sirloin. Beef ribs ham swine pastrami doner brisket buffalo shank
+        <img src="https://i.imgur.com/7PZ1xsm.jpg" height="350px" width="800px">
+        <p style="margin-bottom: 0; margin-left: 1rem; margin-right: 1rem; text-align: center;">ABOUT ME Bacon ipsum dolor amet boudin shank t-bone porchetta pork doner cupim corned beef chicken. Landjaeger jerky shank, pork belly brisket buffalo burgdoggen tongue filet mignon sirloin. Beef ribs ham swine pastrami doner brisket buffalo shank
             pork chop spare ribs beef ham hock chicken. Tenderloin burgdoggen chuck, boudin rump sausage filet mignon tail. Pork venison biltong ball tip beef ribs. Tail bresaola venison, jerky short ribs tenderloin leberkas cow hamburger chuck filet
             mignon burgdoggen. Shankle jerky kevin burgdoggen shoulder buffalo boudin tail prosciutto, pastrami chicken beef ribs ball tip meatball.</p>
-        <img src="https://i.imgur.com/f9i8rLQ.jpg" height="4px" width="800px" class="phsmall">
-        <!--thin line-->
+
+        <!--Start-->
+        <div class="hr"></div>
 
         <!--Butterbeeline-->
-        <div class="imgtext">
-            <img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="300px" align="left">
-            <p class="textleft">Butterbee: hi Salami ham hock sausage flank alcatra meatball ham drumstick picanha strip steak buffalo porchetta. Ribeye short ribs turkey, pig cupim salami leberkas corned beef pork belly venison shoulder. Pork shank short ribs, buffalo jerky
+        <div class="image-text-left-right">
+            <img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="300px">
+            <p>Butterbee: hi Salami ham hock sausage flank alcatra meatball ham drumstick picanha strip steak buffalo porchetta. Ribeye short ribs turkey, pig cupim salami leberkas corned beef pork belly venison shoulder. Pork shank short ribs, buffalo jerky
                 meatball spare ribs. Venison swine short ribs, bresaola chicken tail turkey ham hock. Jowl pork loin sausage short loin ground round burgdoggen fatback corned beef meatball shoulder leberkas beef ribs. Ham hock ham pork tail strip steak
                 meatball pancetta fatback corned beef buffalo cupim.</p>
         </div>
 
 
         <!--Novels-->
-        <img src="https://i.imgur.com/7PZ1xsm.jpg" height="4px" width="800px" class="phsmall">
-        <!--thin line-->
-        <div class="imgtext">
-            <img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="300px" align="right">
-            <p class="textleft">NOVELS: hi Salami ham hock sausage flank alcatra meatball ham drumstick picanha strip steak buffalo porchetta. Ribeye short ribs turkey, pig cupim salami leberkas corned beef pork belly venison shoulder. Pork shank short ribs, buffalo jerky
+        <div class="hr"></div>
+        <div class="image-text-left-right">
+            <p>NOVELS: hi Salami ham hock sausage flank alcatra meatball ham drumstick picanha strip steak buffalo porchetta. Ribeye short ribs turkey, pig cupim salami leberkas corned beef pork belly venison shoulder. Pork shank short ribs, buffalo jerky
                 meatball spare ribs. Venison swine short ribs, bresaola chicken tail turkey ham hock. Jowl pork loin sausage short loin ground round burgdoggen fatback corned beef meatball shoulder leberkas beef ribs. Ham hock ham pork tail strip steak
                 meatball pancetta fatback corned beef buffalo cupim.</p>
+            <img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="300px">
         </div>
 
 
         <!--Music-->
-        <img src="https://i.imgur.com/7PZ1xsm.jpg" height="4px" width="800px" class="phsmall">
-        <!--thin line-->
-        <div class="imgtext">
-            <img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="300px" align="left">
-            <p class="textleft">MUSIC: hi Salami ham hock sausage flank alcatra meatball ham drumstick picanha strip steak buffalo porchetta. Ribeye short ribs turkey, pig cupim salami leberkas corned beef pork belly venison shoulder. Pork shank short ribs, buffalo jerky
+        <div class="hr"></div>
+        <div class="image-text-left-right">
+            <img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="300px">
+            <p>MUSIC: hi Salami ham hock sausage flank alcatra meatball ham drumstick picanha strip steak buffalo porchetta. Ribeye short ribs turkey, pig cupim salami leberkas corned beef pork belly venison shoulder. Pork shank short ribs, buffalo jerky
                 meatball spare ribs. Venison swine short ribs, bresaola chicken tail turkey ham hock. Jowl pork loin sausage short loin ground round burgdoggen fatback corned beef meatball shoulder leberkas beef ribs. Ham hock ham pork tail strip steak
                 meatball pancetta fatback corned beef buffalo cupim.</p>
         </div>
 
-        <!--Footer-->
-        <img src="https://i.imgur.com/7PZ1xsm.jpg" height="4px" width="800px" class="phsmall">
-        <!--thin line-->
+        <!--End-->
+        <div class="hr"></div>
 
 
         <!--
