--- a/newwebsite/butterbee.html
+++ b/newwebsite/butterbee.html
@@ -39,7 +39,7 @@
 
         <h1 style="text-align: center;">Butterbee</h1>
         <div class="image-text-left-right">
-            <img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="300px">
+            <img src="/images/ButterbeeHello.png" width="300px" height="217px">
             <p>BUTTERBEE: hi Salami ham hock sausage flank alcatra meatball ham drumstick picanha strip steak buffalo porchetta. Ribeye short ribs turkey, pig cupim salami leberkas corned beef pork belly venison shoulder. Pork shank short ribs, buffalo jerky
                 meatball spare ribs. Venison swine short.</p>
         </div>
@@ -47,9 +47,9 @@
 
         <!---three boxes-->
         <div style="display: flex; justify-content: space-between;">
-            <a href="#" style="display: block"><img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="250px"></a>
-            <a href="#" style="display: block"><img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="250px"></a>
-            <a href="#" style="display: block"><img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="250px"></a>
+            <a href="#" style="display: block"><img src="/images/bbfb1.png" width="300px" height="217px"></a>
+            <a href="#" style="display: block"><img src="/images/bbinsta.png" width="300px" height="217px"></a>
+            <a href="#" style="display: block"><img src="/images/alanyt.png" width="300px" height="217px"></a>
         </div>
         <div class="hr"></div>
 
