--- a/newwebsite/butterbee.html
+++ b/newwebsite/butterbee.html
@@ -61,7 +61,7 @@
         </div>
         <div class="hr"></div>
 
-        <img src="https://i.imgur.com/7PZ1xsm.jpg" height="350px" width="800px">
+        <img src="/images/bbstore.png" height="402x" width="800px">
         <div class="hr"></div>
 
         <!--
