--- a/newwebsite/store.html
+++ b/newwebsite/store.html
@@ -36,7 +36,7 @@
           -- DO NOT MODIFY ABOVE THIS
           ---------------------------------------------------------------------------
         -->
-
+            <img src="/images/bbstore.png" height="402x" width="800px">
 
         <!--
           ---------------------------------------------------------------------------
