--- a/newwebsite/index.html
+++ b/newwebsite/index.html
@@ -67,7 +67,7 @@
         <!--Music-->
         <div class="hr"></div>
         <div class="image-text-left-right">
-            <img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="300px">
+            <mg src="images/mymusic.png" width="300px" height="217px">
             <p>MUSIC: hi Salami ham hock sausage flank alcatra meatball ham drumstick picanha strip steak buffalo porchetta. Ribeye short ribs turkey, pig cupim salami leberkas corned beef pork belly venison shoulder. Pork shank short ribs, buffalo jerky
                 meatball spare ribs. Venison swine short ribs, bresaola chicken tail turkey ham hock. Jowl pork loin sausage short loin ground round burgdoggen fatback corned beef meatball shoulder leberkas beef ribs. Ham hock ham pork tail strip steak
                 meatball pancetta fatback corned beef buffalo cupim.</p>
