--- a/newwebsite/index.html
+++ b/newwebsite/index.html
@@ -48,9 +48,7 @@
         <!--Butterbeeline-->
         <div class="image-text-left-right">
             <a href="butterbee.html"><img src="images/ButterbeeHello.png" width="300px" height="250px"></a>
-            <p>Butterbee: hi Salami ham hock sausage flank alcatra meatball ham drumstick picanha strip steak buffalo porchetta. Ribeye short ribs turkey, pig cupim salami leberkas corned beef pork belly venison shoulder. Pork shank short ribs, buffalo jerky
-                meatball spare ribs. Venison swine short ribs, bresaola chicken tail turkey ham hock. Jowl pork loin sausage short loin ground round burgdoggen fatback corned beef meatball shoulder leberkas beef ribs. Ham hock ham pork tail strip steak
-                meatball pancetta fatback corned beef buffalo cupim.</p>
+            <p>Butterbee is an original animated series by Keyla Jones. The story follows a green little creature called, Butterbee, who tends to cause a lot of trouble, due to his childish and stubborn attitude. Alan, his guardian fairy, spends most of his time trying to get Butterbee out of trouble though it's not easy. Throughout the series, the two have wacky adventures, meet a variety of interesting creatures, and even sometimes break into song...for no reason. Want to hear more? Click here!
         </div>
 
 
