--- a/newwebsite/index.html
+++ b/newwebsite/index.html
@@ -55,9 +55,7 @@
         <!--Novels-->
         <div class="hr"></div>
         <div class="image-text-left-right">
-            <p>NOVELS: hi Salami ham hock sausage flank alcatra meatball ham drumstick picanha strip steak buffalo porchetta. Ribeye short ribs turkey, pig cupim salami leberkas corned beef pork belly venison shoulder. Pork shank short ribs, buffalo jerky
-                meatball spare ribs. Venison swine short ribs, bresaola chicken tail turkey ham hock. Jowl pork loin sausage short loin ground round burgdoggen fatback corned beef meatball shoulder leberkas beef ribs. Ham hock ham pork tail strip steak
-                meatball pancetta fatback corned beef buffalo cupim.</p>
+            <p>Keyla Jones is an inspiring writer with one finished novel and three more in the works. Her first novel follows a girl named Snow, who lives on the outskirts of a murderous forest called, <b>Nethermore.</b> When she discovers her best friend has gone missing, she is forced to wander into the forest. Little did she knew, this choice would destroy her entire life. Piece by piece, she uncovers dark secrets from her past, she was abandoned as a baby, her biological parents are killers, her friends are not what they seem, and one handsome stranger is the key to it all. <a href=”novels.html”>To read more, click here!</a> </p>
             <a href="novels.html"><img src="images/novel.png" width="300px" height="250px"></a>
         </div>
 
