--- a/newwebsite/index.html
+++ b/newwebsite/index.html
@@ -64,9 +64,9 @@
         <div class="hr"></div>
         <div class="image-text-left-right">
             <a href="music.html"><img src="images/music1.png" width="300px" height="250px"></a>
-            <p>MUSIC: hi Salami ham hock sausage flank alcatra meatball ham drumstick picanha strip steak buffalo porchetta. Ribeye short ribs turkey, pig cupim salami leberkas corned beef pork belly venison shoulder. Pork shank short ribs, buffalo jerky
-                meatball spare ribs. Venison swine short ribs, bresaola chicken tail turkey ham hock. Jowl pork loin sausage short loin ground round burgdoggen fatback corned beef meatball shoulder leberkas beef ribs. Ham hock ham pork tail strip steak
-                meatball pancetta fatback corned beef buffalo cupim.</p>
+            <p>Local Tacoma Musician, Signed Keyla Jones, is a spicy original singer-songwriter known for her powerful vocals and beautiful original songs that take you on journeys through tragic tales and inspiring love songs.
+Her unique music style was inspired by her love of Maroon 5, Colbie Caillat, and the Plain White T’s, and her unique lyrics are inspired by the stories of her life and those of her loved ones. Keyla is a completely self-taught guitarist and has been writing songs since the young age of three. She has performed all over the Phoenix, AZ, area, including the Arizona State Fair and Mesa Music Festival. She has also performed locally at several venues and recently made the top four in the Raising Star of Tacoma Contest.
+</p>
         </div>
 
         <!--End-->
