--- a/newwebsite/index.html
+++ b/newwebsite/index.html
@@ -65,7 +65,7 @@
         <div class="image-text-left-right">
             <a href="music.html"><img src="images/music1.png" width="300px" height="250px"></a>
             <p>Signed Keyla Jones is an origial singer-songwriter known for her spanish sound, powerful vocals, and beautiful lyrics that take you on a jounery through real tragic tales and inspiring love songs.
-Her unique sound was inspired by her love of Maroon 5, Colbie Caillat, and Lily Allen. All of her song inspired by real stories from her life and those of her loved ones. Keyla is a self-taught guitarist/ukuleleist and has been writing original songs since the age of three.
+Her unique sound was inspired by her love of Maroon 5, Colbie Caillat, and Lily Allen. All of her song inspired by real stories from her life and those of her loved ones. Keyla is a self-taught guitarist/ukuleleist and has been writing original songs since the age of three. She has notiably preformed at Arizona State Fair, Mesa Music Festival, Making a Difference Benefit Concert, and made the top four in the Rising Star of Tacoma contest.
             </p>
         </div>
 
