--- a/newwebsite/index.html
+++ b/newwebsite/index.html
@@ -64,7 +64,7 @@
         <div class="hr"></div>
         <div class="image-text-left-right">
             <a href="music.html"><img src="images/music1.png" width="300px" height="250px"></a>
-            <p>Signed Keyla Jones is an original singer-songwriter known for her Spanish sound, powerful vocals, and beautiful lyrics that take you on a journey through tragic tales and inspiring love songs. All of her song inspired by real stories from her life and those of her loved ones. She has notably preformed at Arizona State Fair, Mesa Music Festival, Making a Difference Benefit Concert, and made the top four in the Rising Star of Tacoma contest. <a href="music.html">Listen to her music here!</a>
+            <p>Signed Keyla Jones is an original singer-songwriter known for her Spanish sound, powerful vocals, and beautiful lyrics that take you on a journey through tragic tales and inspiring love songs. Her music is inspired by real stories from her life and those of her loved ones. She has notably preformed at Arizona State Fair, Mesa Music Festival, Making a Difference Benefit Concert, and made the top four in the Rising Star of Tacoma contest. <a href="music.html">Listen to her music here!</a>
             </p>
         </div>
 
