--- a/newwebsite/music.html
+++ b/newwebsite/music.html
@@ -43,6 +43,14 @@
         <div style="width: 50rem; height: 26rem;">
             <iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/420064073&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe>
         </div>
+        
+        <!--ALBUM-->
+        <div class="image-text-left-right">
+            <img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="300px">
+                <p>Signed Keyla Jones is an original singer-songwriter known for her Spanish sound, powerful vocals, and beautiful lyrics that take you on a journey through tragic tales and inspiring love songs. Her music is inspired by real stories from her life and those of her loved ones. Her music has been compared to Marsoon 5, Colbie Caillat, and Norah Jones.
+Keyla is a self-taught guitarist/ukuleleist and has been writing original songs since the age of three. She has notably preformed at Arizona State Fair, Mesa Music Festival, Making a Difference Benefit Concert, and made the top four in the Rising Star of Tacoma contest.</p>
+        </div>
+        <div class="hr"></div>
 
         <!---three boxes-->
         <div class="hr"></div>
@@ -56,9 +64,7 @@
         <!--ALBUM-->
         <div class="image-text-left-right">
             <img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="300px">
-            <p>ALBUM: hi Salami ham hock sausage flank alcatra meatball ham drumstick picanha strip steak buffalo porchetta. Ribeye short ribs turkey, pig cupim salami leberkas corned beef pork belly venison shoulder. Pork shank short ribs, buffalo jerky
-                meatball spare ribs. Venison swine short ribs, bresaola chicken tail turkey ham hock. Jowl pork loin sausage short loin ground round burgdoggen fatback corned beef meatball shoulder leberkas beef ribs. Ham hock ham pork tail strip steak
-                meatball pancetta fatback corned beef buffalo cupim.</p>
+            <p>New Original Ukulele Album Coming Soon.</p>
         </div>
         <div class="hr"></div>
 
