--- a/newwebsite/music.html
+++ b/newwebsite/music.html
@@ -40,6 +40,7 @@
         <h1 align="center" class="h1">Music</h1>
 
         
+        <div class="hr"></div>
         <!--About me-->
         <div class="image-text-left-right">
             <img src="images/music1.png" height=250px" width="300px">
