--- a/newwebsite/music.html
+++ b/newwebsite/music.html
@@ -73,7 +73,7 @@ Keyla is a self-taught guitarist/ukuleleist and has been writing original songs 
         </div>
         <div class="hr"></div>
 
-        <!--freesong-->
+        <!--not in use yet
         <form style="align-self: center; text-align: center; width: 25rem;">
             <input type="hidden" name="_subject" value="Music download request" />
             <p align="center">Get a download link of my original song, ___ for free!</p>
@@ -84,7 +84,8 @@ Keyla is a self-taught guitarist/ukuleleist and has been writing original songs 
             <p class="small-text">Terms and Conditions: blank blank blaknk blaknk blank blank blaknk blaknk blank blank blaknk blaknk blank blank blaknk blaknk blank blank blaknk blaknk blank blank blaknk blaknk blank blank blaknk blaknk blank blank blaknk blaknk blank blank
                 blaknk blaknk.
             </p>
-        </form>
+        </form> 
+        -->
 
         <div class="hr"></div>
 
