--- a/newwebsite/music.html
+++ b/newwebsite/music.html
@@ -68,7 +68,7 @@ Keyla is a self-taught guitarist/ukuleleist and has been writing original songs 
 
         <!--ALBUM-->
         <div class="image-text-left-right">
-            <img src="images/album.png" height=250px" width="300px">
+            <img src="images/album2.png" height=350px" width="800px">
             <p>New Original Ukulele Album Coming Soon.</p>
         </div>
         <div class="hr"></div>
