--- a/newwebsite/music.html
+++ b/newwebsite/music.html
@@ -60,9 +60,9 @@ Keyla is a self-taught guitarist/ukuleleist and has been writing original songs 
         <!---three boxes-->
         <div class="hr"></div>
         <div style="display: flex; justify-content: space-between;">
-            <a href="#" style="display: block"><img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="250px"></a>
-            <a href="#" style="display: block"><img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="250px"></a>
-            <a href="#" style="display: block"><img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="250px"></a>
+            <a href="https://www.youtube.com/watch?v=GYqJ3Cnk7Ts" style="display: block"><img src="images/infectd.png" height="250px" width="250px"></a>
+            <a href="https://www.youtube.com/watch?v=jYoYp3Fi2DU" style="display: block"><img src="images/fallinloved.png" height="250px" width="250px"></a>
+            <a href="https://www.youtube.com/watch?v=B082N71dxd4" style="display: block"><img src="images/lived.png" height="250px" width="250px"></a>
         </div>
         <div class="hr"></div>
 
