--- a/newwebsite/contact.html
+++ b/newwebsite/contact.html
@@ -41,7 +41,7 @@
 
 
         <div class="image-text-left-right">
-            <img src="https://i.imgur.com/7PZ1xsm.jpg" height="300px" width="300px">
+            <img src="images/contact.png" height="300px" width="300px">
             <div>
                 <p><strong>Business inquiry?</strong> Contact me directly at: <span id="business-inquiry-email"></span></p>
                 <br>
