--- a/newwebsite/butterbee.html
+++ b/newwebsite/butterbee.html
@@ -47,9 +47,9 @@
 
         <!---three boxes-->
         <div style="display: flex; justify-content: space-between;">
-            <a href="#" style="display: block"><img src="/images/bbfb1.png" width="260px" height="177px"></a>
-            <a href="#" style="display: block"><img src="/images/bbinsta.png" width="260px" height="177px"></a>
-            <a href="#" style="display: block"><img src="/images/alanyt.png" width="260px" height="177px"></a>
+            <a href="#" style="display: block"><img src="images/bbfb1.png" width="260px" height="177px"></a>
+            <a href="#" style="display: block"><img src="images/bbinsta.png" width="260px" height="177px"></a>
+            <a href="#" style="display: block"><img src="images/alanyt.png" width="260px" height="177px"></a>
         </div>
         <div class="hr"></div>
 
@@ -61,7 +61,7 @@
         </div>
         <div class="hr"></div>
 
-        <img src="/images/bbstore.png" height="402x" width="800px">
+        <img src="images/bbstore.png" height="402x" width="800px">
         <div class="hr"></div>
 
         <!--
