--- a/newwebsite/butterbee.html
+++ b/newwebsite/butterbee.html
@@ -47,9 +47,9 @@
 
         <!---three boxes-->
         <div style="display: flex; justify-content: space-between;">
-            <a href="#" style="display: block"><img src="images/bbfb1.png" width="260px" height="210px"></a>
-            <a href="#" style="display: block"><img src="images/bbinsta.png" width="260px" height="210px"></a>
-            <a href="#" style="display: block"><img src="images/alanyt.png" width="260px" height="210px"></a>
+            <a href="#" style="display: block"><img src="images/bbfb2.png" width="260px" height="210px"></a>
+            <a href="#" style="display: block"><img src="images/bbinsta2.png" width="260px" height="210px"></a>
+            <a href="#" style="display: block"><img src="images/alanyt2.png" width="260px" height="210px"></a>
         </div>
         <div class="hr"></div>
 
