--- a/newwebsite/butterbee.html
+++ b/newwebsite/butterbee.html
@@ -61,7 +61,7 @@
         </div>
         <div class="hr"></div>
 
-        <img src="images/bbstore.png" height="402x" width="800px">
+        <img src="images/bbstore2.png" height="389x" width="800px">
         <div class="hr"></div>
 
         <!--
