--- a/newwebsite/butterbee.html
+++ b/newwebsite/butterbee.html
@@ -61,7 +61,9 @@
         </div>
         <div class="hr"></div>
 
-        <img src="images/bbstore2.png" height="292x" width="600px" align="center">
+        <div style="display: flex;">
+             <img src="images/bbstore2.png" height="292x" width="600px" align="center">
+        </div>
         <div class="hr"></div>
 
         <!--
