--- a/newwebsite/butterbee.html
+++ b/newwebsite/butterbee.html
@@ -61,8 +61,8 @@
         </div>
         <div class="hr"></div>
 
-        <div style="display: flex;">
-             <img src="images/bbstore2.png" height="292x" width="600px" align="center">
+        <div style="display: flex; justify-content: space-between;">
+             <img src="images/bbstore2.png" height="292x" width="600px">
         </div>
         <div class="hr"></div>
 
