--- a/newwebsite/index.html
+++ b/newwebsite/index.html
@@ -37,7 +37,7 @@
           ---------------------------------------------------------------------------
         -->
 
-        <img src="https://i.imgur.com/7PZ1xsm.jpg" height="350px" width="800px">
+        <img src="images/homebanner.png" height="350px" width="800px">
         <p style="margin-bottom: 0; margin-left: 1rem; margin-right: 1rem; text-align: center;">ABOUT ME Bacon ipsum dolor amet boudin shank t-bone porchetta pork doner cupim corned beef chicken. Landjaeger jerky shank, pork belly brisket buffalo burgdoggen tongue filet mignon sirloin. Beef ribs ham swine pastrami doner brisket buffalo shank
             pork chop spare ribs beef ham hock chicken. Tenderloin burgdoggen chuck, boudin rump sausage filet mignon tail. Pork venison biltong ball tip beef ribs. Tail bresaola venison, jerky short ribs tenderloin leberkas cow hamburger chuck filet
             mignon burgdoggen. Shankle jerky kevin burgdoggen shoulder buffalo boudin tail prosciutto, pastrami chicken beef ribs ball tip meatball.</p>
