--- a/newwebsite/store.html
+++ b/newwebsite/store.html
@@ -36,7 +36,7 @@
           -- DO NOT MODIFY ABOVE THIS
           ---------------------------------------------------------------------------
         -->
-            <img src="/images/storecs.png" height="350x" width="800px">
+            <img src="images/storecs.png" height="350x" width="800px">
 
         <!--
           ---------------------------------------------------------------------------
