--- a/newwebsite/store.html
+++ b/newwebsite/store.html
@@ -36,7 +36,7 @@
           -- DO NOT MODIFY ABOVE THIS
           ---------------------------------------------------------------------------
         -->
-            <img src="images/storecs.png" height="438x" width="1000px">
+            <img src="images/storecs2.png" height="438x" width="1000px">
 
         <!--
           ---------------------------------------------------------------------------
