--- a/newwebsite/butterbee.html
+++ b/newwebsite/butterbee.html
@@ -56,7 +56,7 @@
         <div style="display: flex; justify-content: space-between;">
             <a href="#" style="display: block"><img src="images/bbcs.png" height="300px" width="257px"></a>
             <a href="#" style="display: block"><img src="images/onyoncs.png" height="300px" width="257px"></a>
-            <a href="#" style="display: block"><img src="images/goigoics.png" height="300px" width="257px"></a>
+            <a href="#" style="display: block"><img src="images/goigoigcs.png" height="300px" width="257px"></a>
         </div>
         <div class="hr"></div>
 
