--- a/newwebsite/butterbee.html
+++ b/newwebsite/butterbee.html
@@ -46,9 +46,9 @@
 
         <!---three boxes-->
         <div style="display: flex; justify-content: space-between;">
-            <a href="#" style="display: block"><img src="images/bbfb2.png" width="260px" height="210px"></a>
-            <a href="#" style="display: block"><img src="images/bbinsta2.png" width="260px" height="210px"></a>
-            <a href="#" style="display: block"><img src="images/alanyt2.png" width="260px" height="210px"></a>
+            <a href="https://www.facebook.com/SignedKeylaJones" style="display: block"><img src="images/bbfb2.png" width="260px" height="210px"></a>
+            <a href="https://instagram.com/signedkeylajones" style="display: block"><img src="images/bbinsta2.png" width="260px" height="210px"></a>
+            <a href="https://youtube.com/signedkeylajones" style="display: block"><img src="images/alanyt2.png" width="260px" height="210px"></a>
         </div>
         <div class="hr"></div>
 
