--- a/newwebsite/index.html
+++ b/newwebsite/index.html
@@ -38,7 +38,7 @@
         -->
 
         <img src="images/homebanner.png" height="350px" width="800px">
-        <p style="margin-bottom: 0; margin-left: 1rem; margin-right: 1rem; text-align: center;">Keyla Jones is a singer-songwriter, self taught ukuleleist & guitarist, novelist, fake mustache enthusist, and animator of my original cartoon series, Butterbee. </p>
+        <p style="margin-bottom: 0; margin-left: 1rem; margin-right: 1rem; text-align: center;">Keyla Jones is a singer-songwriter, self taught ukuleleist & guitarist, novelist, fake mustache enthusist, and animator/creator of the original cartoon series, Butterbee. </p>
 
         <!--Start-->
         <div class="hr"></div>
